# ASGTransformer

./: .env.example  .gitignore  COLAB.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  VERIFICATION.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/processed/: groups.json  software.json  tactics.json  technique_to_tactic.json  techniques.json  transition_scores.json
docs/: ARCHITECTURE.md  HUGGINGFACE.md  TRANSFORMERS_HUB.md
examples/: client.py  huggingface_automodel.py  unified_model.py
scripts/: export_huggingface.py  export_transformers_model.py  run_api.sh  train.sh  train_wandb.sh  verify_transformers_checkpoint.py
src/asg_transformer/: __init__.py  config.py
src/asg_transformer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/asg_transformer/api/: main.py
src/asg_transformer/cli/: __init__.py  main.py
src/asg_transformer/core/: catalog.py  schemas.py  service.py
src/asg_transformer/evaluation/: __init__.py  evaluate.py
src/asg_transformer/hf/: __init__.py  configuration_asg_transformer.py  modeling_asg_transformer.py
src/asg_transformer/models/: __init__.py  asg_transformer.py  duration_planner.py  scenario_generator.py  semantic_encoder.py  text_generator.py  unified_model.py
src/asg_transformer/monitoring/: __init__.py  wandb_tracker.py
src/asg_transformer/observability/: __init__.py  logging.py  (+1 more)
tests/: test_api.py  test_catalog.py  test_config_paths.py  test_hf_automodel.py  test_runtime_metrics.py  test_scenario_logic.py  test_unified_pipeline.py
(+1 files in other folders)
