[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asg-transformer"
version = "6.0.0"
description = "Transformer-based cyber attack scenario intelligence API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "torch>=2.2,<3.0",
  "transformers>=4.48,<6.0",
  "sentence-transformers>=3.3,<6.0",
  "numpy>=1.26,<3.0",
  "orjson>=3.10,<4.0",
  "structlog>=24.4,<26.0",
  "huggingface-hub>=0.27,<2.0",
  "safetensors>=0.4,<1.0"
]

[project.scripts]
asg = "asg_transformer.cli.main:main"

[project.optional-dependencies]
dev = ["pytest>=8,<10", "pytest-cov>=5,<7", "httpx>=0.27,<1", "ruff>=0.9,<1", "mypy>=1.14,<2"]
train = ["datasets>=3.2,<5", "accelerate>=1.2,<2", "scikit-learn>=1.5,<2", "wandb>=0.19,<1"]

[tool.setuptools.packages.find]
where=["src"]

[tool.ruff]
line-length=100
target-version="py310"
